✒️Feat : Add Confetti

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
+    "js-confetti": "^0.11.0",
     "react": "^18.2.0",
+    "react-canvas-confetti": "^1.3.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.2",
     "react-query": "^3.39.2",
